Fixed About Text overlap

--- a/django_deepdreamer/react_deepdreamer/src/components/pages/About.css
+++ b/django_deepdreamer/react_deepdreamer/src/components/pages/About.css
@@ -14,6 +14,7 @@
     border-radius: 0.5rem;    
     max-width:35rem;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+    overflow: auto;
 }
 
 .about-info h1 {
